--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -56,7 +56,7 @@ body {
 /* Logo */
 .logo {
     flex: 1;
-    margin-left: 1em;
+    margin-left: 0.4em;
 }
 .logo img {
     height: 2.8em;
